refactor: security, jwt, cors and exception handler improvements
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>